Fix null pointers and update main